apps/immich/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Immich"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/icon: "immich"
    gethomepage.dev/description: "Photos"
    gethomepage.dev/href: "https://photos.cyphers.app"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`photos.cyphers.app`)
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: immich-server
          namespace: immich
          port: 2283
  tls:
    secretName: production-cyphers-app-tls
